--- a/SyncSound/package.json
+++ b/SyncSound/package.json
@@ -9,13 +9,15 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"color": "^1.0.3",
 		"lodash": "^4.17.4",
 		"react": "~15.4.0-rc.4",
 		"react-native": "0.40.0",
 		"react-redux": "^5.0.2",
 		"redux": "^3.6.0",
 		"redux-logger": "^2.7.4",
-		"redux-persist": "^4.1.0"
+		"redux-persist": "^4.1.0",
+		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
 		"babel-jest": "18.0.0",
