--- a/SyncSound/package.json
+++ b/SyncSound/package.json
@@ -13,6 +13,7 @@
 		"lodash": "^4.17.4",
 		"react": "~15.4.0-rc.4",
 		"react-native": "0.41.2",
+		"react-native-vector-icons": "^4.0.0",
 		"react-redux": "^5.0.2",
 		"redux": "^3.6.0",
 		"redux-logger": "^2.7.4",
