--- a/SyncSound/package.json
+++ b/SyncSound/package.json
@@ -14,6 +14,7 @@
 		"react": "~15.4.0-rc.4",
 		"react-native": "0.41.2",
 		"react-native-vector-icons": "^4.0.0",
+		"react-native-webrtc": "^1.54.7",
 		"react-redux": "^5.0.2",
 		"redux": "^3.6.0",
 		"redux-logger": "^2.7.4",
